# product-item-microservice

./: .env  Cargo.toml  Dockerfile  README.md
.github/workflows/: cicd.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20241205_170012_create_product_table.rs  m20241205_170022_create_item_table.rs
src/: db.rs  handlers.rs  logger.rs  main.rs  route.rs
src/entities/: item.rs  prelude.rs  product.rs
src/handler/: item_handler.rs  item_handler_create_update.rs  mod.rs  product_handler.rs  product_handler_create_update.rs
src/repository/: item_repository.rs  mod.rs  product_repository.rs
src/router/: route.rs
src/service/: item_service.rs  mod.rs  product_service.rs
