[package]
name = "product-item-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
dotenv = "0.15.0"
futures = "0.3.28"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = "^0.12.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"